--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -40,8 +40,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm align-self-center">
+                    <a class="col col-sm btn btn-sm btn-block btn-warning" type="button" href="#reservation">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -49,10 +52,7 @@
 
     <div class="container">
         <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-left col-md-3">
-                <h3>Our Lipsmacking Culinary Creations</h3>
-            </div>
-            <div class="media">
+            <div class="col-12 col-sm-8 media">
                 <img class="d-flex mr-3 img-thumbnail align-self-center"
                         src="img/uthappizza.png" alt="Uthappizza">
                 <div class="media-body">
@@ -63,6 +63,9 @@
                         Buffalo Paneer.</p>
                 </div>
             </div>
+            <div class="col-12 col-sm-4 order-sm-left col-md-3">
+                <h3>Our Lipsmacking Culinary Creations</h3>
+            </div>
         </div>
 
 
@@ -70,17 +73,17 @@
             <div class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+            <div class="col-12 col-sm-8 media">
+                <div class="media-body">
+                    <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                    <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                </div>
+                <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Buffet">
             </div>
         </div>
 
         <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-left col-md-3">
-                <h3>Meet our Culinary Specialists</h3>
-            </div>
-            <div class="media">
+            <div class="col-12 col-sm-8 col-md-9 media">
                 <img class="d-flex mr-3 img-thumbnail align-self-center"
                         src="img/alberto.png" alt="Alberto Somayya">
                 <div class="media-body">
@@ -91,6 +94,97 @@
                         whos-who in the culinary world, he specializes in
                         creating mouthwatering Indo-Italian fusion experiences.
                         </p>
+                </div>
+            </div>
+            <div class="col-12 col-sm-4 order-sm-left col-md-3">
+                <h3>Meet our Culinary Specialists</h3>
+            </div>
+        </div>
+
+        <div class="row row-content align-items-center">
+            <div class="col-12 col-md-8 offset-md-2">
+                <div class="card" id="reservation">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <dl class="row">
+                            <dt class="col-12 col-md-3">Number of Guests</strong></dt>
+                            <dd class="col-12 col-md-9">
+                                <form action="">
+                                    <div class="form-group row">
+                                        <div class="order-sm-left">
+                                            <div class="form-check">
+                                                <input type="radio" class="form-check-input" name="numGuest" id="numGuest" value="">
+                                                <label class="form-check-label" for="numGuest">
+                                                    <strong>1</strong>
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="offset-1 order-sm-left">
+                                            <div class="form-check">
+                                                <input type="radio" class="form-check-input" name="numGuest" id="numGuest" value="">
+                                                <label class="form-check-label" for="numGuest">
+                                                    <strong>2</strong>
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="offset-1 order-sm-left">
+                                            <div class="form-check">
+                                                <input type="radio" class="form-check-input" name="numGuest" id="numGuest" value="">
+                                                <label class="form-check-label" for="numGuest">
+                                                    <strong>3</strong>
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="offset-1 order-sm-left">
+                                            <div class="form-check">
+                                                <input type="radio" class="form-check-input" name="numGuest" id="numGuest" value="">
+                                                <label class="form-check-label" for="numGuest">
+                                                    <strong>4</strong>
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="offset-1 order-sm-left">
+                                            <div class="form-check">
+                                                <input type="radio" class="form-check-input" name="numGuest" id="numGuest" value="">
+                                                <label class="form-check-label" for="numGuest">
+                                                    <strong>5</strong>
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="offset-1 order-sm-left">
+                                            <div class="form-check">
+                                                <input type="radio" class="form-check-input" name="numGuest" id="numGuest" value="">
+                                                <label class="form-check-label" for="numGuest">
+                                                    <strong>6</strong>
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </dd>
+                        </dl>
+                        <dl class="row">
+                            <dt class="col-12 col-md-3">Date and Time</strong></dt>
+                            <dd class="col-12 col-md-9 order-sm-left">
+                                <form action="">
+                                    <div class="form-group row">
+                                        <div class="col-6 col-md-6">
+                                            <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                                        </div>
+                                        <div class="col-6 col-md-6">
+                                            <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                                        </div>
+                                    </div>
+                                </form>
+                            </dd>
+                        </dl>
+                        <dl class="row">
+                            <dt class="col-12 col-md-3">&nbsp;</dt>
+                            <dd class="col-12 col-md-9">
+                                <button type="submit" class="btn bg-primary text-white">Reserve</button>
+                            </dd>
+                        </dl>
+                    </div>
                 </div>
             </div>
         </div>
