--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -52,6 +52,116 @@
         </div>
     </div>
 
+    <div id="reservation" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <dl class="row">
+                        <dt class="col-12 col-md-3">Number of Guests</strong></dt>
+                        <dd class="col-12 col-md-9">
+                            <form action="">
+                                <div class="form-group row">
+                                    <div class="order-sm-left">
+                                        <div class="form-check">
+                                            <input type="radio" class="form-check-input" name="numGuest" id="numGuest" value="">
+                                            <label class="form-check-label" for="numGuest">
+                                                <strong>1</strong>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="offset-1 order-sm-left">
+                                        <div class="form-check">
+                                            <input type="radio" class="form-check-input" name="numGuest" id="numGuest" value="">
+                                            <label class="form-check-label" for="numGuest">
+                                                <strong>2</strong>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="offset-1 order-sm-left">
+                                        <div class="form-check">
+                                            <input type="radio" class="form-check-input" name="numGuest" id="numGuest" value="">
+                                            <label class="form-check-label" for="numGuest">
+                                                <strong>3</strong>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="offset-1 order-sm-left">
+                                        <div class="form-check">
+                                            <input type="radio" class="form-check-input" name="numGuest" id="numGuest" value="">
+                                            <label class="form-check-label" for="numGuest">
+                                                <strong>4</strong>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="offset-1 order-sm-left">
+                                        <div class="form-check">
+                                            <input type="radio" class="form-check-input" name="numGuest" id="numGuest" value="">
+                                            <label class="form-check-label" for="numGuest">
+                                                <strong>5</strong>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="offset-1 order-sm-left">
+                                        <div class="form-check">
+                                            <input type="radio" class="form-check-input" name="numGuest" id="numGuest" value="">
+                                            <label class="form-check-label" for="numGuest">
+                                                <strong>6</strong>
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </dd>
+                    </dl>
+                    <dl class="row">
+                        <dt class="col-12 col-md-3">Section</strong></dt>
+                        <dd class="col-12 col-md-9 order-sm-left">
+                            <form action="">
+                                <div class="form-group row">
+                                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                        <label class="btn btn-success active">
+                                          <input type="radio" name="options" id="option1" autocomplete="off" checked> Non-Smoking
+                                        </label>
+                                        <label class="btn btn-danger">
+                                          <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                                        </label>
+                                    </div>
+                                </div>
+                            </form>
+                        </dd>
+                    </dl>
+                    <dl class="row">
+                        <dt class="col-12 col-md-3">Date and Time</strong></dt>
+                        <dd class="col-12 col-md-9 order-sm-left">
+                            <form action="">
+                                <div class="form-group row">
+                                    <div class="col-4">
+                                        <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                                    </div>
+                                    <div class="col-4">
+                                        <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                                    </div>
+                                </div>
+                            </form>
+                        </dd>
+                    </dl>
+                    <dl class="row">
+                        <dt class="col-12 col-md-3">&nbsp;</dt>
+                        <dd class="col-12 col-md-9">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn bg-primary al text-white">Reserve</button>
+                        </dd>
+                    </dl>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
@@ -84,9 +194,8 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning"
-                        data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
-                        data-placement="bottom" href="#reservation">Reserve Table</a>
+                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal"
+                    data-placement="bottom" href="#reservation">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -190,94 +299,6 @@
                 <h3>Meet our Culinary Specialists</h3>
             </div>
         </div>
-
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-md-8 offset-md-2">
-                <div class="card" id="reservation">
-                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                    <div class="card-body">
-                        <dl class="row">
-                            <dt class="col-12 col-md-3">Number of Guests</strong></dt>
-                            <dd class="col-12 col-md-9">
-                                <form action="">
-                                    <div class="form-group row">
-                                        <div class="order-sm-left">
-                                            <div class="form-check">
-                                                <input type="radio" class="form-check-input" name="numGuest" id="numGuest" value="">
-                                                <label class="form-check-label" for="numGuest">
-                                                    <strong>1</strong>
-                                                </label>
-                                            </div>
-                                        </div>
-                                        <div class="offset-1 order-sm-left">
-                                            <div class="form-check">
-                                                <input type="radio" class="form-check-input" name="numGuest" id="numGuest" value="">
-                                                <label class="form-check-label" for="numGuest">
-                                                    <strong>2</strong>
-                                                </label>
-                                            </div>
-                                        </div>
-                                        <div class="offset-1 order-sm-left">
-                                            <div class="form-check">
-                                                <input type="radio" class="form-check-input" name="numGuest" id="numGuest" value="">
-                                                <label class="form-check-label" for="numGuest">
-                                                    <strong>3</strong>
-                                                </label>
-                                            </div>
-                                        </div>
-                                        <div class="offset-1 order-sm-left">
-                                            <div class="form-check">
-                                                <input type="radio" class="form-check-input" name="numGuest" id="numGuest" value="">
-                                                <label class="form-check-label" for="numGuest">
-                                                    <strong>4</strong>
-                                                </label>
-                                            </div>
-                                        </div>
-                                        <div class="offset-1 order-sm-left">
-                                            <div class="form-check">
-                                                <input type="radio" class="form-check-input" name="numGuest" id="numGuest" value="">
-                                                <label class="form-check-label" for="numGuest">
-                                                    <strong>5</strong>
-                                                </label>
-                                            </div>
-                                        </div>
-                                        <div class="offset-1 order-sm-left">
-                                            <div class="form-check">
-                                                <input type="radio" class="form-check-input" name="numGuest" id="numGuest" value="">
-                                                <label class="form-check-label" for="numGuest">
-                                                    <strong>6</strong>
-                                                </label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </form>
-                            </dd>
-                        </dl>
-                        <dl class="row">
-                            <dt class="col-12 col-md-3">Date and Time</strong></dt>
-                            <dd class="col-12 col-md-9 order-sm-left">
-                                <form action="">
-                                    <div class="form-group row">
-                                        <div class="col-6 col-md-6">
-                                            <input type="text" class="form-control" id="date" name="date" placeholder="Date">
-                                        </div>
-                                        <div class="col-6 col-md-6">
-                                            <input type="text" class="form-control" id="time" name="time" placeholder="Time">
-                                        </div>
-                                    </div>
-                                </form>
-                            </dd>
-                        </dl>
-                        <dl class="row">
-                            <dt class="col-12 col-md-3">&nbsp;</dt>
-                            <dd class="col-12 col-md-9">
-                                <button type="submit" class="btn bg-primary text-white">Reserve</button>
-                            </dd>
-                        </dl>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 
     <footer class="footer">
@@ -325,10 +346,5 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
 </body>
 </html>
