--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -52,7 +52,7 @@
         </div>
     </div>
 
-    <div id="reservation" class="modal fade" role="dialog">
+    <div id="reservationModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="content">
             <!-- Modal content-->
             <div class="modal-content">
@@ -178,8 +178,7 @@
                 </ul>
             </div>
             <span class="navbar-text">
-                <a data-toggle="modal" data-target="#loginModal">
-                <span class="fa fa-sign-in"></span> Login</a>
+                <a id="login"><span class="fa fa-sign-in"></span> Login</a>
             </span>
         </div>
     </nav>
@@ -194,8 +193,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal"
-                    data-placement="bottom" href="#reservation">Reserve Table</a>
+                    <button class="btn btn-block nav-link btn-warning" data-placement="bottom" id="reservation">Reserve Table</button>
                 </div>
             </div>
         </div>
@@ -351,6 +349,12 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function(){
+            $('#login').click(function() {
+                $('#loginModal').modal('show');
+            });
+            $('#reservation').click(function() {
+                $('#reservationModal').modal('show');
+            });
             $("#mycarousel").carousel( { interval: 2000 } );
             $("#carouselButton").click(function(){
                 if ($('#carouselButton').children('span').hasClass('fa-pause')) {
